--- a/RobotCSimulator/RobotCSimulator.vcxproj.filters
+++ b/RobotCSimulator/RobotCSimulator.vcxproj.filters
@@ -15,15 +15,21 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="TestCode.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="ProgramRunner.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Program.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Program.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="UnitTestAttacher.h">
+    <ClInclude Include="ProgramRunner.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
