Set Up Controller Variables

--- a/RobotCSimulator/imgui.ini
+++ b/RobotCSimulator/imgui.ini
@@ -434,7 +434,12 @@ Size=149,235
 Collapsed=0
 
 [Window][Robot Info]
-Pos=60,60
-Size=100,65
+Pos=55,450
+Size=732,222
+Collapsed=0
+
+[Window][Controller Info]
+Pos=50,60
+Size=742,320
 Collapsed=0
 
