--- a/RobotCSimulator/imgui.ini
+++ b/RobotCSimulator/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=2,0
+Pos=194,106
 Size=550,658
 Collapsed=0
 
@@ -434,12 +434,42 @@ Size=149,235
 Collapsed=0
 
 [Window][Robot Info]
-Pos=55,450
+Pos=85,585
 Size=732,222
 Collapsed=0
 
 [Window][Controller Info]
-Pos=50,60
+Pos=40,304
 Size=742,320
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,222
+Collapsed=0
+
+[Window][Style Editor]
+Pos=527,49
+Size=339,856
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=169,335
+Size=466,265
+Collapsed=0
+
+[Window][Test Window]
+Pos=277,167
+Size=702,374
+Collapsed=0
+
+[Window][Left Motor Info]
+Pos=97,93
+Size=687,291
 Collapsed=0
 
