--- a/RobotCSimulator/RobotCSimulator.vcxproj
+++ b/RobotCSimulator/RobotCSimulator.vcxproj
@@ -146,7 +146,7 @@
   <ItemGroup>
     <ClCompile Include="Source\ROBOTC\ProgramRunner.cpp" />
     <ClCompile Include="Source\ROBOTC\RobotC.cpp" />
-    <ClCompile Include="Source\Util\Debug\Debug.cpp" />
+    <ClCompile Include="Source\Util\Debug\ImGuiWrapper.cpp" />
     <ClCompile Include="Source\Core.cpp" />
     <ClCompile Include="Source\main.cpp" />
     <ClCompile Include="Source\Util\Debug\imgui-SFML.cpp" />
@@ -163,7 +163,7 @@
     <ClInclude Include="Source\ROBOTC\RobotDisplayer.h" />
     <ClInclude Include="Source\ROBOTC\VEXController.h" />
     <ClInclude Include="Source\ROBOTC\CLibrary.h" />
-    <ClInclude Include="Source\Util\Debug\Debug.h" />
+    <ClInclude Include="Source\Util\Debug\ImGuiWrapper.h" />
     <ClInclude Include="Source\Core.h" />
   </ItemGroup>
   <ItemGroup>
