--- a/RobotCSimulator/imgui.ini
+++ b/RobotCSimulator/imgui.ini
@@ -434,17 +434,17 @@ Size=149,235
 Collapsed=0
 
 [Window][Robot Info]
-Pos=15,368
+Pos=12,348
 Size=747,225
 Collapsed=0
 
 [Window][Controller Info]
-Pos=16,28
+Pos=18,16
 Size=742,320
 Collapsed=0
 
 [Window][Dear ImGui Metrics]
-Pos=12,610
+Pos=11,587
 Size=750,273
 Collapsed=0
 
@@ -471,5 +471,10 @@ Collapsed=0
 [Window][Left Motor Info]
 Pos=772,19
 Size=714,253
+Collapsed=0
+
+[Window][Motor Graphs]
+Pos=767,15
+Size=719,539
 Collapsed=0
 
