--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 .vs/
 Release/
 Debug/
-SFML Template Source/Release/
-SFML Template Source/Debug/
-.vs/SFML Template/v16/.suo
-.vs/SFML Template/v16/.suo
+RobotCSimulator/Release/
+RobotCSimulator/Debug/
+.vs/RobotCSimulator/v16/.suo
+.vs/RobotCSimulator/v16/.suo
