Introduced Sensor Value

--- a/RobotCSimulator/imgui.ini
+++ b/RobotCSimulator/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=194,106
+Pos=256,113
 Size=550,658
 Collapsed=0
 
@@ -439,7 +439,7 @@ Size=183,315
 Collapsed=0
 
 [Window][Controller Info]
-Pos=18,16
+Pos=21,9
 Size=183,320
 Collapsed=0
 
@@ -449,7 +449,7 @@ Size=363,273
 Collapsed=0
 
 [Window][Style Editor]
-Pos=527,49
+Pos=549,43
 Size=339,856
 Collapsed=0
 
@@ -474,7 +474,17 @@ Size=714,253
 Collapsed=0
 
 [Window][Motor Graphs]
-Pos=396,18
-Size=1093,462
+Pos=793,18
+Size=695,462
+Collapsed=0
+
+[Window][Motor Info]
+Pos=229,15
+Size=218,264
+Collapsed=0
+
+[Window][Sensor Info]
+Pos=457,-3
+Size=259,398
 Collapsed=0
 
