--- a/RobotCSimulator/RobotCSimulator.vcxproj
+++ b/RobotCSimulator/RobotCSimulator.vcxproj
@@ -144,10 +144,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Source\ROBOTC\Program\ProgramRunner.cpp" />
     <ClCompile Include="Source\ROBOTC\ROBOTCtoC++\RobotC.cpp" />
     <ClCompile Include="Source\Core.cpp" />
     <ClCompile Include="Source\main.cpp" />
+    <ClCompile Include="Source\ROBOTC\ROBOTCtoC++\RobotDisplayer.cpp" />
     <ClCompile Include="Source\Util\ImGuiWrapper\imgui-SFML.cpp" />
     <ClCompile Include="Source\Util\ImGuiWrapper\imgui.cpp" />
     <ClCompile Include="Source\Util\ImGuiWrapper\ImGuiWrapper.cpp" />
