--- a/RobotCSimulator/RobotCSimulator.vcxproj
+++ b/RobotCSimulator/RobotCSimulator.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Source\ROBOTC\Program\Controllers.cpp" />
     <ClCompile Include="Source\ROBOTC\Program\Globals.cpp" />
     <ClCompile Include="Source\ROBOTC\Program\Helpers.cpp" />
+    <ClCompile Include="Source\ROBOTC\Program\Slew.cpp" />
     <ClCompile Include="Source\ROBOTC\RobotAvatar\RobotAvatar.cpp" />
     <ClCompile Include="Source\ROBOTC\ROBOTCtoC++\RobotC.cpp" />
     <ClCompile Include="Source\Core.cpp" />
@@ -165,6 +166,7 @@
     <ClInclude Include="Source\ROBOTC\Program\Globals.h" />
     <ClInclude Include="Source\ROBOTC\Program\Helpers.h" />
     <ClInclude Include="Source\ROBOTC\Program\Program.h" />
+    <ClInclude Include="Source\ROBOTC\Program\Slew.h" />
     <ClInclude Include="Source\ROBOTC\RobotAvatar\ROBOT_AVATAR_SETTINGS.h" />
     <ClInclude Include="Source\ROBOTC\ROBOTCtoC++\DefineGlobalOnce.h" />
     <ClInclude Include="Source\ROBOTC\Program\ProgramRunner.h" />
