--- a/RobotCSimulator/RobotCSimulator.vcxproj
+++ b/RobotCSimulator/RobotCSimulator.vcxproj
@@ -151,6 +151,7 @@
     <ClCompile Include="Source\ROBOTC\Program\Setup.cpp" />
     <ClCompile Include="Source\ROBOTC\Program\Slew.cpp" />
     <ClCompile Include="Source\ROBOTC\RobotAvatar\RobotAvatar.cpp" />
+    <ClCompile Include="Source\ROBOTC\ROBOTCtoC++\Cortex.cpp" />
     <ClCompile Include="Source\ROBOTC\ROBOTCtoC++\RobotC.cpp" />
     <ClCompile Include="Source\Core.cpp" />
     <ClCompile Include="Source\main.cpp" />
@@ -173,6 +174,7 @@
     <ClInclude Include="Source\ROBOTC\Program\Setup.h" />
     <ClInclude Include="Source\ROBOTC\Program\Slew.h" />
     <ClInclude Include="Source\ROBOTC\RobotAvatar\ROBOT_AVATAR_SETTINGS.h" />
+    <ClInclude Include="Source\ROBOTC\ROBOTCtoC++\Cortex.h" />
     <ClInclude Include="Source\ROBOTC\ROBOTCtoC++\DefineGlobalOnce.h" />
     <ClInclude Include="Source\ROBOTC\Program\ProgramRunner.h" />
     <ClInclude Include="Source\ROBOTC\RobotAvatar\RobotAvatar.h" />
