--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
+Pos=203,188
+Size=457,422
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=197,59
+Size=550,680
+Collapsed=0
+
+[Window][Peripherals]
 Pos=60,60
-Size=51,48
+Size=517,345
 Collapsed=0
 
