--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,32 @@ Size=457,422
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=26,3
-Size=550,680
+Pos=585,66
+Size=550,810
 Collapsed=0
 
 [Window][Peripherals]
 Pos=1411,35
 Size=388,461
+Collapsed=0
+
+[Window][e]
+Pos=757,109
+Size=448,235
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=60,60
+Size=338,239
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=950,368
+Size=466,391
+Collapsed=0
+
+[Window][Peripheral Graphs]
+Pos=3,78
+Size=498,472
 Collapsed=0
 
