--- a/RobotCSimulator.vcxproj
+++ b/RobotCSimulator.vcxproj
@@ -208,6 +208,9 @@
     <ClInclude Include="Window.h" />
     <ClInclude Include="WindowObjects\WindowObject.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".clang-format" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
