--- a/RobotCSimulator.vcxproj
+++ b/RobotCSimulator.vcxproj
@@ -169,13 +169,16 @@
     <ClCompile Include="Dependencies\imgui-1.77\imgui_widgets.cpp" />
     <ClCompile Include="Dependencies\imgui-sfml-2.1\imgui-SFML.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="RobotC.cpp" />
+    <ClCompile Include="RobotCTypes.cpp" />
+    <ClCompile Include="RobotCFunctions.cpp" />
+    <ClCompile Include="RobotCPeripherals.cpp" />
     <ClCompile Include="RobotCProgram\Controllers.cpp" />
     <ClCompile Include="RobotCProgram\Globals.cpp" />
     <ClCompile Include="RobotCProgram\Helpers.cpp" />
     <ClCompile Include="RobotCProgram\PID.cpp" />
     <ClCompile Include="RobotCProgram\Setup.cpp" />
     <ClCompile Include="RobotCProgram\Slew.cpp" />
+    <ClCompile Include="RobotCThreads.cpp" />
     <ClCompile Include="Utility\DeltaClock.cpp" />
   </ItemGroup>
   <ItemGroup>
