--- a/RobotCSimulator.vcxproj
+++ b/RobotCSimulator.vcxproj
@@ -182,6 +182,7 @@
     <ClCompile Include="Utility\DeltaClock.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="RobotCProgram\Externs.h" />
     <ClInclude Include="Utility\DeltaClock.h" />
     <ClInclude Include="Utility\TextureSprite.h" />
     <ClInclude Include="WindowObjects\ImGuiGraph.h" />
